fixed pom for Lambda tests (including UI tests)